--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>org.bridgedb.rdb</module>
   	<module>org.bridgedb.rdb.construct</module>
   	<module>org.bridgedb.server</module>
+        <module>org.bridgedb.mapper.chebi</module>
   	<module>org.bridgedb.webservice.bridgerest</module>
   	<module>org.bridgedb.webservice.biomart</module>
   	<module>org.bridgedb.webservice.cronos</module>
