--- a/org.bridgedb.mapper.chebi/build.xml
+++ b/org.bridgedb.mapper.chebi/build.xml
@@ -11,6 +11,7 @@
 
 	<!-- transient deps are optional, they are used only in the manifest classpath -->
 	<path id="transient.deps">
+		<pathelement location="../dist/osgi-3.5.0.v20090520.jar"/>
 	</path>
 
 	<!-- embedded jars are embedded in the resulting bundle -->
@@ -18,8 +19,10 @@
 		<!-- None -->
 	</path>
 
-	<!-- test deps are only used for testing -->
-	<path id="test.deps">
-	</path>
+        <!-- test deps are only used for testing -->
+        <path id="test.deps">
+                <pathelement location="../org.bridgedb/build-lib/junit4.jar"/>
+                <pathelement location="../org.bridgedb/build-lib/hamcrest-core.jar"/>
+        </path>
 
 </project>
