Java8-compilable PV3 version

--- a/org.bridgedb.rdb.construct/pom.xml
+++ b/org.bridgedb.rdb.construct/pom.xml
@@ -96,11 +96,11 @@
 			<artifactId>derbytools</artifactId>
 			<version>${derby.version}</version>
 		</dependency>
-                <dependency>
+                <!-- dependency>
                         <groupId>org.apache.derby</groupId>
                         <artifactId>derbyshared</artifactId>
                         <version>${derby.version}</version>
-                </dependency>
+                </dependency -->
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
