--- a/org.bridgedb.rdb/pom.xml
+++ b/org.bridgedb.rdb/pom.xml
@@ -95,11 +95,11 @@
 			<artifactId>derbytools</artifactId>
 			<version>${derby.version}</version>
 		</dependency>
-                <dependency>
+                <!-- dependency>
                         <groupId>org.apache.derby</groupId>
                         <artifactId>derbyshared</artifactId>
                         <version>${derby.version}</version>
-                </dependency>
+                </dependency -->
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
